--- a/app/src/main/res/layout/fragment_travel_coupon.xml
+++ b/app/src/main/res/layout/fragment_travel_coupon.xml
@@ -23,6 +23,17 @@
         app:rippleColor="@color/material_on_background_disabled"
         app:tint="@null" />
 
+    <TextView
+        android:id="@+id/tv_no_coupon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="쿠폰을 준비 중이에요."
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView2"
+        app:layout_constraintEnd_toEndOf="@+id/nestedScrollView2"
+        app:layout_constraintStart_toStartOf="@+id/nestedScrollView2"
+        app:layout_constraintTop_toTopOf="@+id/nestedScrollView2" />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView2"
         android:layout_width="0dp"
@@ -60,11 +71,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
-                android:text="총 00개의 상품이 있습니다."
                 android:textColor="@color/gray_50"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+                tools:text="총 00개의 상품이 있습니다." />
 
             <LinearLayout
                 android:id="@+id/sortContainer"
@@ -73,6 +84,7 @@
                 android:layout_marginEnd="18dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
 
