--- a/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
@@ -92,7 +92,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="20dp"
-			android:text="13,456P"
+			tools:text="13,456P"
 			android:textColor="@color/black"
 			android:textSize="16sp"
 			android:textStyle="bold"
@@ -115,7 +115,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="10dp"
-			android:text="6,544P"
+			tools:text="6,544P"
 			android:textColor="@color/red"
 			android:textSize="16sp"
 			android:textStyle="bold"
@@ -138,7 +138,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="10dp"
-			android:text="-10,000P"
+			tools:text="-10,000P"
 			android:textColor="@color/primary"
 			android:textSize="16sp"
 			android:textStyle="bold"
@@ -160,7 +160,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="10dp"
-			android:text="3,456P"
+			tools:text="3,456P"
 			android:textColor="@color/red"
 			android:textSize="16sp"
 			android:textStyle="bold"
