--- a/app/src/main/res/layout/fragment_tumblr_confirm.xml
+++ b/app/src/main/res/layout/fragment_tumblr_confirm.xml
@@ -1,109 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.reward.TumblrConfirmFragment">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".ui.reward.TumblrConfirmFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_tumblr_confirm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="텀블러 인증"
-        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:titleCentered="true"
-        android:background="@color/transparent"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+	<com.google.android.material.appbar.MaterialToolbar
+		android:id="@+id/toolbar_tumblr_confirm"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="@color/transparent"
+		android:minHeight="?attr/actionBarSize"
+		android:theme="?attr/actionBarTheme"
+		app:layout_constraintTop_toTopOf="parent"
+		app:navigationIcon="@drawable/ic_arrow_back"
+		app:title="텀블러 인증"
+		app:titleCentered="true"
+		app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-    <ScrollView
-        app:layout_constraintTop_toBottomOf="@id/toolbar_tumblr_confirm"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/toolbar_tumblr_confirm">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
 
-            <View
-                android:id="@+id/view_tumblr_confirm"
-                android:layout_width="0dp"
-                android:layout_height="210dp"
-                android:background="@color/primary"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+			<View
+				android:id="@+id/view_tumblr_confirm"
+				android:layout_width="0dp"
+				android:layout_height="210dp"
+				android:background="@color/primary"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_tumblr_confirm_image"
-                android:layout_width="180dp"
-                app:layout_constraintStart_toStartOf="@id/view_tumblr_confirm"
-                app:layout_constraintEnd_toEndOf="@id/view_tumblr_confirm"
-                android:layout_marginBottom="45dp"
-                app:layout_constraintBottom_toBottomOf="@id/view_tumblr_confirm"
-                android:layout_height="180dp"
-                android:src="@drawable/img_tumbler" />
+			<ImageView
+				android:id="@+id/iv_tumblr_confirm_image"
+				android:layout_width="180dp"
+				android:layout_height="180dp"
+				android:layout_marginBottom="45dp"
+				android:src="@drawable/img_tumbler"
+				app:layout_constraintBottom_toBottomOf="@id/view_tumblr_confirm"
+				app:layout_constraintEnd_toEndOf="@id/view_tumblr_confirm"
+				app:layout_constraintStart_toStartOf="@id/view_tumblr_confirm" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_tumblr_confirm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="160dp"
-                android:minHeight="600dp"
-                app:cardCornerRadius="30dp"
-                app:cardElevation="0.5dp"
-                app:layout_constraintTop_toTopOf="@id/view_tumblr_confirm" >
+			<androidx.cardview.widget.CardView
+				android:id="@+id/card_tumblr_confirm"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="160dp"
+				android:minHeight="600dp"
+				app:cardCornerRadius="30dp"
+				app:cardElevation="0.5dp"
+				app:layout_constraintTop_toTopOf="@id/view_tumblr_confirm">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/tv_tumblr_confirm_text_title"
-                        android:textColor="@color/gray_100"
-                        android:layout_marginStart="40dp"
-                        android:textSize="14sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="60dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/tumblr_confirm_title" />
+					<TextView
+						android:id="@+id/tv_tumblr_confirm_text_title"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginStart="40dp"
+						android:layout_marginTop="60dp"
+						android:text="@string/tumblr_confirm_title"
+						android:textColor="@color/gray_100"
+						android:textSize="14sp"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/tv_tumblr_confirm_text_description"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginEnd="30dp"
-                        android:text="@string/tumblr_confirm_description"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="@id/tv_tumblr_confirm_text_title"
-                        app:layout_constraintTop_toBottomOf="@id/tv_tumblr_confirm_text_title" />
+					<TextView
+						android:id="@+id/tv_tumblr_confirm_text_description"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="30dp"
+						android:layout_marginEnd="30dp"
+						android:text="@string/tumblr_confirm_description"
+						android:textColor="@color/black"
+						android:textSize="14sp"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintHorizontal_bias="0.0"
+						app:layout_constraintStart_toStartOf="@id/tv_tumblr_confirm_text_title"
+						app:layout_constraintTop_toBottomOf="@id/tv_tumblr_confirm_text_title" />
 
-                    <ImageView
-                        android:id="@+id/iv_tumblr_confirm_qr"
-                        android:layout_marginTop="105dp"
-                        android:layout_width="200dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_tumblr_confirm_text_description"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_height="200dp"
-                        android:src="@drawable/img_qr" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
+					<TextView
+						android:id="@+id/tv_qr_time"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="20dp"
+						android:textSize="18sp"
+						android:textStyle="bold"
+						app:layout_constraintStart_toStartOf="@id/tv_tumblr_confirm_text_description"
+						app:layout_constraintTop_toBottomOf="@id/tv_tumblr_confirm_text_description"
+						tools:text="02:55" />
 
-            <Space
-                app:layout_constraintTop_toBottomOf="@id/card_tumblr_confirm"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+					<com.google.android.material.imageview.ShapeableImageView
+						android:id="@+id/iv_tumblr_confirm_qr"
+						android:layout_width="200dp"
+						android:layout_height="200dp"
+						android:layout_marginTop="80dp"
+						android:src="@color/gray_5"
+						android:visibility="invisible"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toBottomOf="@id/tv_tumblr_confirm_text_description" />
+
+					<androidx.appcompat.widget.AppCompatImageView
+						android:id="@+id/iv_qr_refresh"
+						android:layout_width="48dp"
+						android:layout_height="48dp"
+						android:src="@drawable/ic_refresh"
+						android:visibility="gone"
+						app:layout_constraintBottom_toBottomOf="@id/iv_tumblr_confirm_qr"
+						app:layout_constraintEnd_toEndOf="@id/iv_tumblr_confirm_qr"
+						app:layout_constraintStart_toStartOf="@id/iv_tumblr_confirm_qr"
+						app:layout_constraintTop_toTopOf="@id/iv_tumblr_confirm_qr" />
+
+				</androidx.constraintlayout.widget.ConstraintLayout>
+			</androidx.cardview.widget.CardView>
+
+			<Space
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				app:layout_constraintTop_toBottomOf="@id/card_tumblr_confirm" />
+		</androidx.constraintlayout.widget.ConstraintLayout>
+	</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
