--- a/app/src/main/res/layout/item_point_history_list.xml
+++ b/app/src/main/res/layout/item_point_history_list.xml
@@ -17,26 +17,37 @@
         app:srcCompat="@drawable/img_point_bag" />
 
     <TextView
-        android:id="@+id/tv_point_history_list_point"
+        android:id="@+id/tv_point_history_list_point_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/iv_point_history_list_image"
         android:layout_marginStart="15dp"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="@id/iv_point_history_list_image"
-        android:layout_marginTop="5dp"
-        android:text="-10500P" />
+        android:layout_marginTop="7dp"
+        android:text="출석체크" />
 
     <TextView
-        android:id="@+id/tv_point_history_list_point_description"
-        app:layout_constraintTop_toBottomOf="@id/tv_point_history_list_point"
-        app:layout_constraintStart_toStartOf="@id/tv_point_history_list_point"
+        android:id="@+id/tv_point_history_list_point_date"
+        app:layout_constraintTop_toBottomOf="@id/tv_point_history_list_point_description"
+        app:layout_constraintStart_toStartOf="@id/tv_point_history_list_point_description"
         android:layout_width="wrap_content"
-        android:textSize="14sp"
+        android:textSize="12sp"
+        android:layout_marginTop="2dp"
         android:textColor="@color/gray_100"
         android:layout_height="wrap_content"
-        android:text="커피 쿠폰 구매" />
+        android:text="16:32" />
+
+    <TextView
+        android:id="@+id/tv_point_history_list_point"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/iv_point_history_list_image"
+        app:layout_constraintBottom_toBottomOf="@id/iv_point_history_list_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-100P" />
 
     <Space
         android:layout_width="match_parent"
