--- a/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
@@ -21,7 +21,7 @@
 		android:id="@+id/tv_travel_payment_sheet_brand"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="파크 하얏트 부산"
+		tools:text="파크 하얏트 부산"
 		android:textColor="@color/black"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -30,7 +30,7 @@
 		android:id="@+id/tv_travel_payment_sheet_name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="파크 하얏트 부산 기프트 카드 1만원권"
+		tools:text="파크 하얏트 부산 기프트 카드 1만원권"
 		android:textColor="#5A5A5A"
 		android:textSize="18sp"
 		app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="8dp"
-		android:text="10,000P"
+		tools:text="10,000P"
 		android:textColor="@color/black"
 		android:textSize="24sp"
 		android:textStyle="bold"
