--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -51,7 +51,7 @@
             android:id="@+id/tv_ranking_weekly_steps_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="0"
             android:textColor="@android:color/white"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:text="이번달 심은 나무 수"
+            android:text="이번주 심은 나무 수"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:text=""
+            android:text="0.00"
             android:textColor="@android:color/white"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -208,7 +208,7 @@
                 android:id="@+id/tv_ranking_my_profile_walk_count"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
-                android:text=""
+                android:text="0"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:gravity="end"
