--- a/app/src/main/res/layout/fragment_transit_confirm.xml
+++ b/app/src/main/res/layout/fragment_transit_confirm.xml
@@ -75,18 +75,34 @@
                         android:text="@string/transit_confirm_title" />
 
                     <TextView
-                        android:id="@+id/tv_transit_confirm_text_description"
+                        android:id="@+id/tv_transit_confirm_text_description_1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="30dp"
-                        android:text="@string/transit_confirm_description"
+                        android:lineSpacingExtra="7dp"
+                        android:text="@string/transit_confirm_description_1"
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@id/tv_transit_confirm_text_title"
                         app:layout_constraintTop_toBottomOf="@id/tv_transit_confirm_text_title" />
+
+                    <TextView
+                        android:id="@+id/tv_transit_confirm_text_description_2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="70dp"
+                        android:layout_marginEnd="30dp"
+                        android:lineSpacingExtra="7dp"
+                        android:text="@string/transit_confirm_description_2"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="@id/tv_transit_confirm_text_title"
+                        app:layout_constraintTop_toBottomOf="@id/tv_transit_confirm_text_description_1" />
 
                     <TextView
                         android:id="@+id/tv_transit_confirm_btn_description"
@@ -106,14 +122,14 @@
                         android:layout_width="0dp"
                         android:layout_height="48dp"
                         android:layout_marginHorizontal="50dp"
-                        android:layout_marginTop="230dp"
+                        android:layout_marginTop="25dp"
                         android:text="@string/transit_confirm_btn_title"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         app:cornerRadius="5dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_transit_confirm_text_description" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_transit_confirm_text_description_2" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
