--- a/app/src/main/res/layout/fragment_tumblr_confirm.xml
+++ b/app/src/main/res/layout/fragment_tumblr_confirm.xml
@@ -80,6 +80,7 @@
 						android:layout_height="wrap_content"
 						android:layout_marginTop="30dp"
 						android:layout_marginEnd="30dp"
+						android:lineSpacingExtra="7dp"
 						android:text="@string/tumblr_confirm_description"
 						android:textColor="@color/black"
 						android:textSize="14sp"
@@ -92,7 +93,7 @@
 						android:id="@+id/tv_qr_time"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:layout_marginTop="20dp"
+						android:layout_marginTop="45dp"
 						android:textSize="18sp"
 						android:textStyle="bold"
 						app:layout_constraintStart_toStartOf="@id/tv_tumblr_confirm_text_description"
@@ -103,7 +104,7 @@
 						android:id="@+id/iv_tumblr_confirm_qr"
 						android:layout_width="200dp"
 						android:layout_height="200dp"
-						android:layout_marginTop="80dp"
+						android:layout_marginTop="70dp"
 						android:src="@color/gray_5"
 						android:visibility="invisible"
 						app:layout_constraintEnd_toEndOf="parent"
