fix: travel ui and feat

--- a/app/src/main/res/layout/fragment_travel_home.xml
+++ b/app/src/main/res/layout/fragment_travel_home.xml
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="HOT 추천쿠폰"
+                android:text="HOT 추천쿠폰 🔥"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/card_travel_banner" />
 
