--- a/app/src/main/res/layout/fragment_travel_search.xml
+++ b/app/src/main/res/layout/fragment_travel_search.xml
@@ -75,8 +75,10 @@
                 android:id="@+id/tv_no_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="'OOOOO' 상품이 없어요."
+                android:gravity="center"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                tools:text="'OOOOO' 상품이 없어요."
                 android:textColor="@color/gray_10"
                 android:textSize="16sp"
                 android:visibility="gone"
@@ -125,10 +127,10 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_search_coupon_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:visibility="invisible"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
