--- a/app/src/main/res/layout/fragment_travel_hot_coupon.xml
+++ b/app/src/main/res/layout/fragment_travel_hot_coupon.xml
@@ -29,12 +29,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_travel_hor_coupon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
