--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -389,18 +389,44 @@
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toTopOf="@id/tv_home_store_more" />
 
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/rv_home_store"
-				android:layout_width="0dp"
+
+			<LinearLayout
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginBottom="20dp"
-				android:orientation="horizontal"
-				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-				app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/tv_home_store"
-				tools:listitem="@layout/item_home_store" />
+				android:layout_marginBottom="20dp">
+
+
+				<com.facebook.shimmer.ShimmerFrameLayout
+					android:id="@+id/shimmer_home_store"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:orientation="horizontal">
+
+						<include layout="@layout/item_shimmer_store" />
+
+						<include layout="@layout/item_shimmer_store" />
+
+					</androidx.appcompat.widget.LinearLayoutCompat>
+				</com.facebook.shimmer.ShimmerFrameLayout>
+
+				<androidx.recyclerview.widget.RecyclerView
+					android:id="@+id/rv_home_store"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+					tools:listitem="@layout/item_home_store" />
+			</LinearLayout>
+
 
 		</androidx.constraintlayout.widget.ConstraintLayout>
 	</androidx.core.widget.NestedScrollView>
