--- a/app/src/main/res/layout/item_home_store.xml
+++ b/app/src/main/res/layout/item_home_store.xml
@@ -14,13 +14,14 @@
 		android:src="@drawable/background_home"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.SmallComponent" />
+		app:shapeAppearanceOverlay="@style/ImageCorner" />
 
 	<TextView
 		android:id="@+id/tv_rv_title"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="10dp"
+		android:layout_marginTop="3dp"
 		android:ellipsize="end"
 		android:maxLines="1"
 		android:textStyle="bold"
@@ -34,6 +35,7 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginHorizontal="10dp"
+		android:layout_marginTop="6dp"
 		android:ellipsize="end"
 		android:maxLines="2"
 		android:textColor="@color/gray_50"
