--- a/app/src/main/res/layout/item_shimmer_coupon.xml
+++ b/app/src/main/res/layout/item_shimmer_coupon.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="180dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
@@ -14,28 +14,29 @@
         android:layout_height="180dp"
         android:background="@color/gray_5"
         android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ImageCorner" />
 
     <TextView
         android:id="@+id/tv_coupon_brand"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@color/gray_5"
         android:ellipsize="end"
         android:maxLines="1"
-        tools:text="쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름"
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_coupon_detail_thumnail" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_coupon_detail_thumnail"
+        tools:text="쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름" />
 
     <TextView
         android:id="@+id/tv_coupon_name"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:background="@color/gray_5"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
@@ -47,9 +48,10 @@
 
     <TextView
         android:id="@+id/tv_coupon_price"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@color/gray_5"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
@@ -59,4 +61,3 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_coupon_name"
         tools:text="10,000P" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
