--- a/app/src/main/res/layout/item_shimmer_coupon_horizental.xml
+++ b/app/src/main/res/layout/item_shimmer_coupon_horizental.xml
@@ -21,21 +21,23 @@
 
     <TextView
         android:id="@+id/tv_coupon_brand"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@color/gray_5"
         android:ellipsize="end"
         android:maxLines="1"
-        tools:text="쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름"
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_coupon_detail_thumnail" />
+        app:layout_constraintTop_toBottomOf="@id/iv_coupon_detail_thumnail"
+        tools:text="쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름쿠폰브랜드이름" />
 
     <TextView
         android:id="@+id/tv_coupon_name"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:background="@color/gray_5"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
@@ -47,9 +49,10 @@
 
     <TextView
         android:id="@+id/tv_coupon_price"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@color/gray_5"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
