--- a/app/src/main/res/layout/fragment_electric_vehicle_confirm_photo.xml
+++ b/app/src/main/res/layout/fragment_electric_vehicle_confirm_photo.xml
@@ -63,11 +63,12 @@
                     android:layout_width="250dp"
                     android:layout_height="250dp"
                     app:cardCornerRadius="10dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="130dp"
                     android:elevation="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
                     <ImageView
                         android:id="@+id/iv_electric_photo_photo"
@@ -85,10 +86,10 @@
                     android:text="결제 금액, 결제 일시, 사용처가 포함된 스크린샷을 제출해 주세요. 검토 후 포인트를 지급해 드립니다."
                     android:textColor="@color/black"
                     android:textSize="13sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cv_electric_photo_photo" />
+                    app:layout_constraintBottom_toTopOf="@id/btn_electric_photo_confirm" />
 
                 <Button
                     android:id="@+id/btn_electric_photo_confirm"
@@ -99,7 +100,7 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:cornerRadius="5dp"
-                    android:layout_marginBottom="70dp"
+                    android:layout_marginBottom="50dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
