--- a/app/src/main/res/layout/fragment_travel_coupon_detail.xml
+++ b/app/src/main/res/layout/fragment_travel_coupon_detail.xml
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:background="#F4F4F4"
-                    android:scaleType="fitCenter"
+                    android:scaleType="centerCrop"
                     app:srcCompat="@drawable/img_travel_coupon01" />
             </com.google.android.material.card.MaterialCardView>
 
