--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,10 @@
 	</style>
 
 	<style name="Theme.JikiGo" parent="Base.Theme.JikiGo" />
+
+	<!-- 추가: 스플래시 화면 테마 -->
+	<style name="Theme.JikiGo.Splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+		<item name="android:windowBackground">@drawable/splash</item>
+		<item name="android:statusBarColor">@android:color/transparent</item>
+	</style>
 </resources>
