--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,6 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/primary"
-	tools:context=".MainActivity">
+	tools:context=".ui.activity.MainActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
