Chore: 패키지 이동

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -347,7 +347,7 @@
 		tools:layout="@layout/fragment_tos">
 		<argument
 			android:name="urlMethod"
-			app:argType="com.protect.jikigo.data.WebSiteURL" />
+			app:argType="com.protect.jikigo.utils.WebSiteURL" />
 	</fragment>
 
 	<fragment
