Refactor: NewsItem, NewsResponse 모델 패키지로 분리

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -86,7 +86,7 @@
 		tools:layout="@layout/fragment_news_detail">
 		<argument
 			android:name="newsItem"
-			app:argType="com.protect.jikigo.data.NewsItem" />
+			app:argType="com.protect.jikigo.data.model.NewsItem" />
 	</fragment>
 
 
