Feat: home -> 포인트 내역, 더보기 버튼 네비게이션 연결

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -34,6 +34,9 @@
 		<action
 			android:id="@+id/action_navigation_home_to_travelCouponDetail"
 			app:destination="@id/travelCouponDetail" />
+		<action
+			android:id="@+id/action_navigation_home_to_pointHistory"
+			app:destination="@id/pointHistory" />
 	</fragment>
 
 	<fragment
