--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -104,6 +104,15 @@
 				app:layout_constraintStart_toStartOf="@id/view_home_point"
 				app:layout_constraintTop_toTopOf="@id/view_home_point" />
 
+			<View
+				android:id="@+id/view_point"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				app:layout_constraintBottom_toBottomOf="@id/tv_home_point"
+				app:layout_constraintEnd_toEndOf="@id/iv_home_point"
+				app:layout_constraintStart_toStartOf="@id/tv_home_point"
+				app:layout_constraintTop_toTopOf="@id/tv_home_point" />
+
 			<TextView
 				android:id="@+id/tv_home_point"
 				android:layout_width="wrap_content"
@@ -254,6 +263,15 @@
 				app:layout_constraintStart_toEndOf="@id/tv_home_notice"
 				app:layout_constraintTop_toTopOf="@id/tv_home_notice" />
 
+			<View
+				android:id="@+id/view_notice_more"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				app:layout_constraintBottom_toBottomOf="@id/tv_home_notice_more"
+				app:layout_constraintEnd_toEndOf="@id/iv_home_notice_more"
+				app:layout_constraintStart_toStartOf="@id/tv_home_notice_more"
+				app:layout_constraintTop_toTopOf="@id/tv_home_notice_more" />
+
 			<TextView
 				android:id="@+id/tv_home_notice_more"
 				android:layout_width="wrap_content"
@@ -368,6 +386,15 @@
 				app:layout_constraintStart_toStartOf="@id/view_home_point"
 				app:layout_constraintTop_toBottomOf="@id/view_home_notice" />
 
+			<View
+				android:id="@+id/view_store_more"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				app:layout_constraintBottom_toBottomOf="@id/tv_home_store_more"
+				app:layout_constraintEnd_toEndOf="@id/iv_home_store_more"
+				app:layout_constraintStart_toStartOf="@id/tv_home_store_more"
+				app:layout_constraintTop_toTopOf="@id/tv_home_store_more" />
+
 			<TextView
 				android:id="@+id/tv_home_store_more"
 				android:layout_width="wrap_content"
@@ -393,12 +420,12 @@
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
+				android:layout_marginBottom="20dp"
+				android:orientation="horizontal"
+				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tv_home_store"
-				android:layout_marginBottom="20dp">
+				app:layout_constraintTop_toBottomOf="@id/tv_home_store">
 
 
 				<com.facebook.shimmer.ShimmerFrameLayout
